[package]
name = "cch23-wolfboyyang"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.2", features = ["multipart"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-runtime = "0.35.0"
shuttle-axum = { version = "0.35.0", default-features = false, features = [
    "axum-0-7",
] }
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1.40"
base64 = "0.21.5"
reqwest = { version = "0.11.22", features = ["multipart"] }
assert_approx_eq = "1.1.0"
lodepng = "3.9.2"
ulid = { version = "1.1.0", features = ["uuid"] }
uuid = "1.6.1"
chrono = "0.4.31"

[dev-dependencies]
axum-test = "14.0.0"
tokio = { version = "1.34", features = ["full"] }
serde_json = "1.0"
